<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.home.thecarshop.presentation.addnewcar.viewmodel.AddCarViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.addnewcar.AddCarStepInfoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center|left"
                        android:text="@string/include_some_details"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:id="@+id/lytCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:paddingBottom="20dp"
                        android:visibility="gone"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/lbl_category"
                            android:textColor="@color/black_effective" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                            app:spanCount="@integer/grid_columns"
                            tools:listitem="@layout/item_condition" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:paddingBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/lbl_condition"
                            android:textColor="@color/black_effective" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_condition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                            app:spanCount="@integer/grid_columns"
                            tools:listitem="@layout/item_condition" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp">


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_title"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            app:counterEnabled="true"
                            app:counterMaxLength="25"
                            app:endIconMode="clear_text"
                            app:suffixText="">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLength="25"
                                android:maxLines="1"
                                android:text="@={viewModel.titleText}" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:weightSum="1">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:hint="@string/lbl_seats"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtSeat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:maxLength="1"
                                android:text="@={viewModel.seatText}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:hint="@string/lbl_price"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            app:prefixText="$">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtPrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:maxLength="8"
                                android:maxLines="1"
                                android:text="@={viewModel.priceText}" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="25dp"
                        android:weightSum="1">


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/lytModel"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:hint="@string/lbl_model"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtModel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:maxLength="4"
                                android:text="@={viewModel.modelText}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:hint="@string/lbl_date_released"
                            android:imeOptions="actionDone"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:inputType="text"
                                android:maxLength="10"
                                android:text="@={viewModel.dateText}" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytConditional"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp">


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txtInputConditional"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            app:counterEnabled="true"
                            app:endIconMode="clear_text"
                            app:suffixText="">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtConditional"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSaveCar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_save"
                android:textColor="@color/colorAccent" />
        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>